@@ -1,3 +1,7 @@
+2008-02-29
+
+	* gtk/example/boy: 加入一个GObject的例子。
+
 2008-01-19
 "Myword" 0.8
 
